# movie-recommendation-model

./: .flake8  .gitignore  main.py  pyproject.toml
app/: main.py  scripts.py
app/notebooks/: 1.0-recommender.ipynb
app/recommender/: dataset.py  dataset_processer.py  features.py
app/recommender/base/: runner.py
app/recommender/modeling/: predict.py  train.py
app/utils/: model_types.py
